--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
         <button class="b1">Book a Car</button>
         <button class="b2">Quick Book</button>
       </div>
-
       <div class="mobile-inputs">
         <div class="input-nav">
           <ul>
@@ -224,20 +223,27 @@
         </div>
 
         <div class="inputs" id="inputs1" style="display: none">
-          <input class="loc-ico" type="text" placeholder="Pick-Up Location" />
+          <img src="assets/icons/re_map.svg" class="red_cal"/>
+          <input type="text" placeholder="Pick-Up Location" />
+          <img src="assets/icons/red_calender.svg" alt="Calendar" class="red_cal"/>
           <input
             class="date-ico"
             type="datetime-local"
             placeholder="pickup date"
           />
+          <img src="assets/icons/red_calender.svg" alt="Calendar" class="red_cal"/>
           <input class="date-ico" type="datetime-local" />
           <button class="b3">Search</button>
         </div>
 
         <div class="inputs" id="inputs2">
+          <img src="assets/icons/re_map.svg" class="red_cal"/>
           <input class="loc-ico" type="text" placeholder="Pick-Up Location" />
+          <img src="assets/icons/re_map.svg" class="red_cal"/>
           <input class="loc-ico" type="text" placeholder="Drop-Off Location" />
+          <img src="assets/icons/red_calender.svg" alt="Calendar" class="red_cal"/>
           <input class="date-ico" type="datetime-local" />
+          <img src="assets/icons/red_calender.svg" alt="Calendar" class="red_cal"/>
           <input class="date-ico" type="datetime-local" />
           <button class="b3">Search</button>
         </div>
