--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       });
     </script>
 
-    <!-- script for mobile book button -->
+   <!-- mobile sidebar -->
     <script>
       document
         .getElementById("menuButton")
@@ -675,6 +675,7 @@
           sidebar.style.display = "none";
         });
     </script>
+     <!-- script for mobile book button -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const mobIn = document.querySelector(".mobile-inputs");
